--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@ Ven, déjate consentir y luce espectacular con un look que te haga sentir única
     </section>
     <section class="container mt-5">
       <section class="row">
-        <section class="col-6">
+        <section class="col-12 col-md-6">
           <img src="img/producto 1.jpg" alt="foto" class="img-fluid" >
         </section>
 
-        <secttion class="col-6 card p-5 shadom">
+        <secttion class="col-12 col-md-6 card p-5 shadom">
           <h3>Trenzas bohemias</h3>
           <p>
            las trenzas bohemias son un estilo libre, romantico y lleno de encanto natural se caracterizan por su textura suelta ondas suaves y detalles entrelazados que combinan elegancia con un toque relajado. Perfectas para cualquier ocación, desde un dia casual hasta un evento especial, reflejan una belleza autentica y sin esfuerzo. 💙 
@@ -94,11 +94,11 @@ Ven, déjate consentir y luce espectacular con un look que te haga sentir única
 
       </section>
       <section class="row mt-5">
-        <section class="col-6">
+        <section class="col-12 col-md-6">
           <img src="img/producto 2.jpg" alt="foto" class="img-fluid" >
         </section>
 
-        <secttion class="col-6 card p-5 shadom">
+        <secttion class="col-12 col-md-6 card p-5 shadom">
           <h3>Las fulany</h3>
           <p>
            Trenzas fulany un estilo unico que combina elegancia, color y actitud, resaltando tu belleza natural en cada trenza. 💙 
